# tv-hask

./: .gitignore  .hlint.yaml  CLAUDE.md  Makefile  README.md  STATUS.md  cabal.project  cast_diff.py  data  theme.csv  tv  tv-hask.cabal  tv.prof  weeder.toml
.github/workflows/: ci.yml
.tmp/: cast_diff.py  cast_text_diff.py  find_clears.py  frame_detail.py  hask-folder.cast  inspect.py  lean-derive.cast  lean-diff.cast  lean-filter.cast  lean-folder.cast  lean-freq.cast  lean-fzf.cast  lean-heatmap.cast  lean-hf.cast  lean-meta.cast  lean-plot.cast  lean-sort.cast  lean-sparkline.cast  run_trace.py  run_trace2.py  run_with_emit_log.py  sparkline-post.cast
app/: Main.hs
bench/: RenderBench.hs
c/: adbc_core.c  nanoarrow.h  sock_shim.c
cbits/: prqlc_shim.c  tv_render.c  tv_render.h
data/: bars_in_values.csv  basic.bsv  basic.csv  filtered_test.parquet  floats.csv  freq_test.parquet  full.csv  grp_sort.csv  meta_empty.csv  meta_test.parquet  meta_test.parquet.tv.meta.parquet  multi_freq.csv  nu_help.duckdb  null_col.csv  null_col_c.csv  numeric.csv  nyse10k.parquet  pac.csv  sample.parquet.tv.meta.parquet  sel_null.csv  sel_single.csv  single_val.csv  sort_test.parquet  spaced_header.txt  split_test.csv  strings.csv  test.arrow  test.avro  test.json  test.jsonl  test.sqlite  test.xlsx  unsorted.csv  wide_scroll.csv
data/diff_test/: after.csv  before.csv  first.csv  second.csv
data/finance/: sample_ohlc.csv
data/hive/date=2024-01-01/: data.parquet
data/hive/date=2024-01-02/: data.parquet
data/hive/date=2024-01-03/: data.parquet
data/hive/date=2024-01-04/: data.parquet
data/hive/date=2024-01-05/: data.parquet
data/join_test/: right.csv
data/plot/: candle.csv  hist.csv  line.csv  mixed.csv  time.csv  time_wide.csv
doc/: architecture.md  derive.cast  diff.cast  filter.cast  folder.cast  freq.cast  fzf.cast  gen_demo.py  haskell-vs-lean.md  heatmap.cast  hf.cast  meta.cast  plot.cast  rename-table.md  review.md  sort.cast  sparkline.cast  split.cast  whitney-review.md
scripts/: duckdb_tv_extensions.cmake  gen_ohlc.py  gen_plot_e2e.sh  gen_plot_haskell.hs  gen_plot_refs.R  hf_datasets.py  osquery_tables.py
src/Tv/: App.hs  AppF.hs  Clip.hs  CmdConfig.hs  Derive.hs  Df.hs  Diff.hs  Eda.hs  Eff.hs  Export.hs  FileFormat.hs  Filter.hs  Folder.hs  Freq.hs  Ftp.hs  Fzf.hs  Handler.hs  Join.hs  Key.hs  Kitty.hs  Lens.hs  Loader.hs  Log.hs  Meta.hs  Nav.hs  Ops.hs  Plot.hs  Prelude.hs  Remote.hs  Render.hs  Replay.hs  Runner.hs  Session.hs  Socket.hs  Source.hs  SourceConfig.hs  Sparkline.hs  Split.hs  StatusAgg.hs  StrEnum.hs  (+10 more)
src/Tv/App/: Common.hs  FeatureCommands.hs  Main.hs  Types.hs
src/Tv/Data/: DuckDB.hs  Prql.hs  Text.hs
src/Tv/Data/ADBC/: Adbc.hs  Ops.hs  Prql.hs  Table.hs
src/Tv/Data/DuckDB/: Conn.hs  Ops.hs  Prql.hs  PrqlC.hs  Table.hs  funcs.prql
src/Tv/Df/: Bridge.hs  Elab.hs  Expr.hs  Freq.hs  Parse.hs  Prql.hs  Query.hs
src/Tv/Ftp/: Client.hs
src/Tv/Fzf/: Match.hs  Picker.hs
src/Tv/Plot/: Chart.hs
src/Tv/S3/: Client.hs
src/Tv/Source/: Core.hs  Ftp.hs  HfDataset.hs  HfRoot.hs  HfRootSetup.hs  Osquery.hs  OsquerySetup.hs  Pg.hs  Rest.hs  S3.hs
src/Tv/Types/: TH.hs
src/Tv/UI/: Info.hs  Preview.hs
test/: Doctest.hs  DuckDBSpec.hs  LargeDataSpec.hs  MainSpec.hs  PureSpec.hs  RenderSpec.hs  ScreenSpec.hs  Spec.hs  Test.hs  TestDf.hs  TestLargeData.hs  TestPlotE2E.hs  TestPure.hs  TestScreen.hs  TestUtil.hs  pty_run.py  run_lean_bin.sh  run_lean_tests.sh
