cabal-version:      3.0
name:               tv-hask
version:            0.1.0.0
synopsis:           Terminal table viewer (Haskell port of Tc)
license:            MIT
build-type:         Simple

extra-source-files:
  data/funcs.prql
  theme.csv

common shared
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    RecordWildCards
  ghc-options: -Wall -Wno-unused-imports -O2

library
  import: shared
  hs-source-dirs: src
  -- Seed branch: no ported modules yet. Each layer's commit adds its
  -- modules here. Tv.Data.DuckDB is parked on disk but not listed until
  -- its deps (Tv.Types, Tv.Data.ADBC.Prql) come online.
  exposed-modules:
    Tv.App.Common
    Tv.App.Main
    Tv.AppF
    Tv.CmdConfig
    Tv.Data.ADBC.Adbc
    Tv.Data.ADBC.Ops
    Tv.Data.ADBC.Prql
    Tv.Data.ADBC.Table
    Tv.Data.DuckDB
    Tv.Data.Text
    Tv.Derive
    Tv.Diff
    Tv.Export
    Tv.FileFormat
    Tv.Filter
    Tv.Folder
    Tv.Ftp
    Tv.Fzf
    Tv.Join
    Tv.Key
    Tv.Lens
    Tv.Meta
    Tv.Nav
    Tv.Plot
    Tv.Render
    Tv.Replay
    Tv.Runner
    Tv.Session
    Tv.SourceConfig
    Tv.Sparkline
    Tv.Split
    Tv.StatusAgg
    Tv.StrEnum
    Tv.Stub
    Tv.Term
    Tv.Theme
    Tv.Transpose
    Tv.Types
    Tv.UI.Info
    Tv.UI.Preview
    Tv.Util
    Tv.View
  build-depends:
    aeson >= 2.0,
    ansi-terminal >= 0.11,
    base >= 4.16 && < 5,
    bytestring,
    directory >= 1.3,
    duckdb-ffi >= 1.5 && < 2,
    file-embed >= 0.0.15,
    filepath >= 1.4,
    hashable >= 1.4,
    process >= 1.6,
    text >= 2.0,
    time >= 1.11,
    unix >= 2.7,
    unordered-containers >= 0.2,
    vector >= 0.13

executable tv
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded
  build-depends:
    base >= 4.16 && < 5,
    tv-hask

test-suite tv-hask-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    TestLargeData
    TestPure
    TestScreen
    TestUtil
  ghc-options: -threaded -rtsopts "-with-rtsopts=-M2G"
  build-depends:
    base >= 4.16 && < 5,
    tv-hask,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    process >= 1.6,
    text >= 2.0,
    vector >= 0.13
