cabal-version:      3.0
name:               tv-hask
version:            0.1.0.0
synopsis:           Terminal table viewer (Haskell port of Tc)
license:            MIT
build-type:         Simple

extra-source-files:
  src/Tv/Data/DuckDB/funcs.prql
  theme.csv

common shared
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    RecordWildCards
    OverloadedLabels
    DataKinds
    FlexibleInstances
    MultiParamTypeClasses
    UndecidableInstances
    TypeFamilies
  ghc-options: -Wall -O2

library
  import: shared
  hs-source-dirs: src
  -- Seed branch: no ported modules yet. Each layer's commit adds its
  -- modules here. Tv.Data.DuckDB is parked on disk but not listed until
  -- its deps (Tv.Types, Tv.Data.DuckDB.Prql) come online.
  exposed-modules:
    Tv.App.Common
    Tv.App.Main
    Tv.App.Types
    Tv.AppF
    Tv.CmdConfig
    Tv.Data.DuckDB.Conn
    Tv.Data.DuckDB.Ops
    Tv.Data.DuckDB.Prql
    Tv.Data.DuckDB.Table
    Tv.Data.DuckDB
    Tv.Data.Text
    Tv.Diff
    Tv.Eda
    Tv.Export
    Tv.FileFormat
    Tv.Filter
    Tv.Folder
    Tv.Ftp
    Tv.Fzf
    Tv.Key
    Tv.Meta
    Tv.Nav
    Tv.Freq
    Tv.Plot
    Tv.Render
    Tv.Session
    Tv.Source
    Tv.Source.Core
    Tv.Source.S3
    Tv.Source.Ftp
    Tv.Source.HfRoot
    Tv.Source.HfRootSetup
    Tv.Source.HfDataset
    Tv.Source.Rest
    Tv.Source.Osquery
    Tv.Source.OsquerySetup
    Tv.Source.Pg
    Tv.Sparkline
    Tv.Ops
    Tv.StatusAgg

    Tv.Term
    Tv.Theme
    Tv.Transpose
    Tv.Types
    Tv.UI.Info
    Tv.UI.Preview
    Tv.Log
    Tv.Remote
    Tv.Socket
    Tv.Tmp
    Tv.View
  build-depends:
    aeson >= 2.0,
    ansi-terminal >= 0.11,
    async >= 2.2,
    base >= 4.16 && < 5,
    bytestring,
    directory >= 1.3,
    duckdb-ffi >= 1.5 && < 2,
    file-embed >= 0.0.15,
    filepath >= 1.4,
    containers >= 0.6,
    hashable >= 1.4,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    http-types >= 0.12,
    network >= 3.1,
    optics-core >= 0.4 && < 0.5,
    optics-th >= 0.4 && < 0.5,
    process >= 1.6,
    scientific >= 0.3,
    text >= 2.0,
    time >= 1.11,
    transformers >= 0.6,
    unix >= 2.7,
    unordered-containers >= 0.2,
    vector >= 0.13,
    zlib >= 0.6

executable tv
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded
  build-depends:
    base >= 4.16 && < 5,
    tv-hask

test-suite tv-hask-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Test
    TestLargeData
    TestPure
    TestScreen
    TestUtil
  ghc-options: -threaded -rtsopts "-with-rtsopts=-M2G"
  build-depends:
    base >= 4.16 && < 5,
    tv-hask,
    bytestring,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.10,
    QuickCheck >= 2.14,
    directory >= 1.3,
    filepath >= 1.4,
    optics-core >= 0.4 && < 0.5,
    process >= 1.6,
    text >= 2.0,
    vector >= 0.13

test-suite doctest
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  build-depends:
    base >= 4.16 && < 5,
    tv-hask,
    doctest-parallel >= 0.4
