cabal-version:      3.0
name:               tv-hask
version:            0.1.0.0
synopsis:           Terminal table viewer (Haskell port of Tc)
license:            MIT
build-type:         Simple

extra-source-files:
  src/Tv/Data/DuckDB/funcs.prql
  theme.csv

common shared
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    RecordWildCards
    OverloadedLabels
    DataKinds
    FlexibleInstances
    MultiParamTypeClasses
    UndecidableInstances
    TypeFamilies
    NoFieldSelectors
    DuplicateRecordFields
  ghc-options: -Wall -O2

library
  import: shared
  hs-source-dirs: src
  -- Seed branch: no ported modules yet. Each layer's commit adds its
  -- modules here. Tv.Data.DuckDB is parked on disk but not listed until
  -- its deps (Tv.Types, Tv.Data.DuckDB.Prql) come online.
  exposed-modules:
    Tv.App.Common
    Tv.App.Main
    Tv.App.Types
    Tv.AppF
    Tv.CmdConfig
    Tv.Data.DuckDB.Conn
    Tv.Data.DuckDB.Ops
    Tv.Data.DuckDB.Prql
    Tv.Data.DuckDB.Table
    Tv.Data.DuckDB
    Tv.Data.Text
    Tv.Diff
    Tv.Eda
    Tv.Export
    Tv.FileFormat
    Tv.Filter
    Tv.Folder
    Tv.Ftp
    Tv.Ftp.Client
    Tv.Fzf
    Tv.Fzf.Match
    Tv.Fzf.Picker
    Tv.Key
    Tv.Meta
    Tv.Nav
    Tv.Freq
    Tv.Plot
    Tv.Plot.Chart
    Tv.Render
    Tv.Session
    Tv.Source
    Tv.Source.Core
    Tv.Source.S3
    Tv.Source.Ftp
    Tv.Source.HfRoot
    Tv.Source.HfRootSetup
    Tv.Source.HfDataset
    Tv.Source.Rest
    Tv.Source.Osquery
    Tv.Source.OsquerySetup
    Tv.Source.Pg
    Tv.Sparkline
    Tv.Ops
    Tv.Prelude
    Tv.StatusAgg

    Tv.Term
    Tv.Theme
    Tv.Transpose
    Tv.Types
    Tv.Types.TH
    Tv.UI.Info
    Tv.UI.Preview
    Tv.Remote
    Tv.Socket
    Tv.Util
    Tv.View
  other-modules:
    Tv.Data.DuckDB.PrqlC
    Tv.S3.Client
  build-depends:
    aeson >= 2.0,
    ansi-terminal >= 0.11,
    async >= 2.2,
    base >= 4.16 && < 5,
    base16-bytestring >= 1.0,
    base64-bytestring >= 1.2,
    bytestring,
    case-insensitive >= 1.2,
    Chart >= 1.9 && < 1.10,
    Chart-cairo >= 1.9 && < 1.10,
    colour >= 2.3,
    crypton >= 0.32,
    data-default-class >= 0.1,
    directory >= 1.3,
    duckdb-ffi >= 1.5 && < 2,
    file-embed >= 0.0.15,
    filepath >= 1.4,
    ftp-client >= 0.5 && < 0.6,
    containers >= 0.6,
    hashable >= 1.4,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    http-types >= 0.12,
    network >= 3.1,
    ram >= 0.22,
    optics-core >= 0.4 && < 0.5,
    optics-th >= 0.4 && < 0.5,
    process >= 1.6,
    scientific >= 0.3,
    template-haskell >= 2.18,
    text >= 2.0,
    time >= 1.11,
    transformers >= 0.6,
    unix >= 2.7,
    unordered-containers >= 0.2,
    vector >= 0.13,
    zlib >= 0.6
  c-sources: cbits/prqlc_shim.c
  include-dirs: cbits

executable tv
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded
  ld-options: -Wl,-s,--gc-sections
  -- Static-link the Rust prqlc engine. Header (cbits/prqlc.h) vendored.
  -- Build libprqlc_c.a with `make prqlc` (clones PRQL repo + cargo build).
  -- Rust runtime needs pthread + dl + m + gcc_s.
  extra-lib-dirs: vendor/lib, vendor/duckdb
  ld-options: -Wl,--push-state,--whole-archive -lprqlc_c -Wl,--pop-state
  -- ============================================================
  -- DO NOT REORDER the ld-options block below. It is delicate.
  -- ============================================================
  -- Static-link libduckdb (engine + 4 extensions + 13 sub-libs).
  -- vendor/duckdb is searched BEFORE system paths so -lduckdb resolves
  -- to libduckdb.a (a symlink to libduckdb_static.a built by
  -- `make duckdb-source`), shadowing /usr/lib/libduckdb.so. The
  -- source-build is required: the generated_extension_loader.a in
  -- the prebuilt release zip (from `make duckdb`) references 8
  -- extensions' vtables — the 4 listed here plus autocomplete, tpch,
  -- tpcds, jemalloc — so this link line would fail to resolve against
  -- it. `make duckdb-source` regenerates the loader with only these 4.
  --
  -- Why the toggles:
  --  -Bstatic forces static even when a co-located .so exists;
  --  --start-group iterates until all symbols resolve (the 19 archives
  --    have circular C++ refs between extensions and the engine);
  --  -Bdynamic is restored at the end so subsequent libs (pthread,
  --    libstdc++) are still linked dynamically.
  ld-options: -Wl,-Bstatic,--start-group
              -lduckdb
              -lcore_functions_extension -lparquet_extension -licu_extension
              -ljson_extension
              -lduckdb_re2 -lduckdb_fmt -lduckdb_pg_query -lduckdb_zstd
              -lduckdb_utf8proc -lduckdb_yyjson -lduckdb_mbedtls
              -lduckdb_miniz -lduckdb_hyperloglog -lduckdb_fastpforlib
              -lduckdb_fsst -lduckdb_skiplistlib
              -lduckdb_generated_extension_loader
              -Wl,--end-group,-Bdynamic
  -- Bundle libstdc++ and libgcc so the binary doesn't need a matching
  -- C++ runtime on the target. DuckDB's prebuilts reference
  -- GLIBCXX_3.4.26+ which RHEL 8's system libstdc++ lacks. Adds
  -- ~1-3 MB after --gc-sections. glibc stays dynamic, so the binary
  -- still needs the build host's glibc or newer.
  --
  -- -Bstatic/-Bdynamic wraps the explicit -lstdc++ so only C++ runtime
  -- goes static while pthread/dl/m/atomic stay dynamic.
  -- -static-libgcc rewrites libgcc_s.so refs to libgcc.a / libgcc_eh.a
  -- (covers Rust _Unwind_* from libprqlc_c).
  ld-options: -Wl,-Bstatic -lstdc++ -Wl,-Bdynamic
  ghc-options: -optl-static-libgcc
  -- atomic is needed for duckdb's atomic<int128_t> on x86_64.
  extra-libraries: pthread, dl, m, atomic
  build-depends:
    base >= 4.16 && < 5,
    tv-hask


test-suite tv-hask-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Test
    TestLargeData
    TestPure
    TestScreen
    TestUtil
  ghc-options: -threaded -rtsopts "-with-rtsopts=-M2G" -optl-static-libgcc
  -- Test exe links against tv-hask lib which transitively pulls in
  -- duckdb/prqlc; mirror the executable stanza's link setup so the
  -- test binary resolves the same way.
  extra-lib-dirs: vendor/lib, vendor/duckdb
  ld-options: -Wl,--push-state,--whole-archive -lprqlc_c -Wl,--pop-state
  ld-options: -Wl,-Bstatic,--start-group
              -lduckdb
              -lcore_functions_extension -lparquet_extension -licu_extension
              -ljson_extension
              -lduckdb_re2 -lduckdb_fmt -lduckdb_pg_query -lduckdb_zstd
              -lduckdb_utf8proc -lduckdb_yyjson -lduckdb_mbedtls
              -lduckdb_miniz -lduckdb_hyperloglog -lduckdb_fastpforlib
              -lduckdb_fsst -lduckdb_skiplistlib
              -lduckdb_generated_extension_loader
              -Wl,--end-group,-Bdynamic
  ld-options: -Wl,-Bstatic -lstdc++ -Wl,-Bdynamic
  extra-libraries: pthread, dl, m, atomic
  build-depends:
    base >= 4.16 && < 5,
    tv-hask,
    bytestring,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.10,
    QuickCheck >= 2.14,
    directory >= 1.3,
    filepath >= 1.4,
    optics-core >= 0.4 && < 0.5,
    process >= 1.6,
    text >= 2.0,
    vector >= 0.13

test-suite doctest
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  build-depends:
    base >= 4.16 && < 5,
    tv-hask,
    doctest-parallel >= 0.4
